--- a/css/base.css
+++ b/css/base.css
@@ -4507,6 +4507,28 @@ input[type="checkbox"]:checked + .switch-toggle-red:active:after, input[type="ra
               -ms-grid-row-align: center;
           align-items: center;
 }
+.modal-va-middle .modal-dialog {
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+@media only screen and (min-width: 480px) {
+  .modal-va-middle .modal-dialog.modal-xs {
+    -webkit-box-flex: 0;
+    -webkit-flex-grow: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .modal-va-middle .modal-dialog {
+    -webkit-box-flex: 0;
+    -webkit-flex-grow: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
+  }
+}
 
 .modal-va-middle-show {
   display: -webkit-box;
